--- a/HH4b.tex
+++ b/HH4b.tex
@@ -4,23 +4,37 @@
 \section{$HH \to 4b$ Status and Perspectives}
 \label{sec:HH4b}
 
+\subsection{Current background modeling and trigger strategies}
 %% 1. Current background modeling and trigger strategies:
-%% 	1.1 ATLAS: 2b->4b extrapolation in data
-%% 	1.2 CMS: Functional fit for resonance searches and hemisphere mixing for non resonant HH search. 
-%% 	1.3 Mutli-bjet triggers: L1 multijet triggers ~3kHz, HLT b-tag triggers ~40Hz in 2016/2017. (John’s slides) ATLAS measures trigger object level efficiencies and combines them to estimate event level efficiency. See my thesis chapter 9 for detailed explanation of this method. 
 
-%% 2. Limitations of current strategies:
-%% 	2.1 ATLAS: statistically limited validation technique, focus is on 1D model of final mHH discriminant in single Signal Region; less optimal than high dimensional model/MVA.  Iterative reweighting handles correlations in 2b->4b extrapolation. Requires triggers with no more than 2 online b-tags. 
-%% 	2.2 CMS: Multiple separate analyses of same final state. Hemisphere mixing background model has lower statistics than background model in ATLAS approach. May not model other background components well (ttbar, H/Z+Jets, HZ, ZZ). 
-%% 	2.3 High HLT CPU usage for tracking in b-jet triggers. Limited efficiency at L1 for mHH < 500 GeV (see my thesis fig 9.5c). 
+ATLAS: 2b->4b extrapolation in data
 
-%% 3. Potential improvements
-%% 	3.1 Bootstrap multijet model from lower jet multiplicity, validate methods in 2b->3b. At low mHH signal contamination is negligible. At high mHH need to be careful with 3b data which can offer significant sensitivity. (Include 3b SR at high mHH in resolved analysis?)
-%% 	3.2 Machine learning techniques to extrapolate from 2/3b data to 4b data. Use hemisphere mixing or intentionally incorrect jet pairing to validate background model techniques in Signal Region phase space with smeared or reduced signal contamination. Use trijet data to validate some multijet background techniques. 
-%% 	3.3 Multiple signal regions of varying purity in combined fit and/or multidimensional fits including angular variables (SUSY, background/signal different spin correlations), (b-)jet multiplicity (target VLQ, RPV SUSY, VBF), to maximize sensitivity to broad range of models. Requires high dimensional background modeling and validation! 
-%% 	3.4 Dedicated SM ZZ/ZH measurements to further validate HH techniques (in analogy to successful VH measurements by both CMS and ATLAS). This will also be useful for analysis generalizations looking for additional scalars Y->XH->4b. 
-%% 	3.5 Hardware tracking! Brief outline of HTT(FTK) upgrades? 
-%% 	3.6 Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?
+CMS: Functional fit for resonance searches and hemisphere mixing for non resonant HH search.
+
+Trigger: L1 multijet triggers ~3kHz, HLT b-tag triggers ~40Hz in 2016/2017. (John’s slides) ATLAS measures trigger object level efficiencies and combines them to estimate event level efficiency. See my thesis chapter 9 for detailed explanation of this method.
+
+\subsection{Limitations of Current Strategies}
+
+ATLAS: statistically limited validation technique, focus is on 1D model of final mHH discriminant in single Signal Region; less optimal than high dimensional model/MVA.  Iterative reweighting handles correlations in 2b->4b extrapolation. Requires triggers with no more than 2 online b-tags.
+
+CMS: Multiple separate analyses of same final state. Hemisphere mixing background model has lower statistics than background model in ATLAS approach. May not model other background components well (ttbar, H/Z+Jets, HZ, ZZ).
+
+Trigger: High HLT CPU usage for tracking in b-jet triggers. Limited efficiency at L1 for mHH < 500 GeV (see my thesis fig 9.5c).
+
+\subsection{Potential Improvements}
+
+3.1 Bootstrap multijet model from lower jet multiplicity, validate methods in 2b->3b. At low mHH signal contamination is negligible. At high mHH need to be careful with 3b data which can offer significant sensitivity. (Include 3b SR at high mHH in resolved analysis?)
+
+3.2 Machine learning techniques to extrapolate from 2/3b data to 4b data. Use hemisphere mixing or intentionally incorrect jet pairing to validate background model techniques in Signal Region phase space with smeared or reduced signal contamination. Use trijet data to validate some multijet background techniques. 
+
+3.3 Multiple signal regions of varying purity in combined fit and/or multidimensional fits including angular variables (SUSY, background/signal different spin correlations), (b-)jet multiplicity (target VLQ, RPV SUSY, VBF), to maximize sensitivity to broad range of models. Requires high dimensional background mo
+deling and validation! 
+
+3.4 Dedicated SM ZZ/ZH measurements to further validate HH techniques (in analogy to successful VH measurements by both CMS and ATLAS). This will also be useful for analysis generalizations looking for additional scalars Y->XH->4b. 
+
+3.5 Hardware tracking! Brief outline of HTT(FTK) upgrades? 
+
+3.6 Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?
         
 %% In the absence of new high mass resonances this phase space holds the most general promise
 %% for exciting physics. The ultimate benchmark for LHC $HH$ physics is to be sensitive to \smhh production, and in particular
