--- a/HH-white-paper.tex
+++ b/HH-white-paper.tex
@@ -13,6 +13,8 @@
 %\addbibresource{Bibliography.bib}
 \addbibresource{HH4b.bib}
 \usepackage{xspace}
+\usepackage{caption,subfig,epsfig}
+\usepackage{amsmath}
 
 \begin{document}
 %
