--- a/HH4b.bib
+++ b/HH4b.bib
@@ -5,3 +5,26 @@
     url            = "https://cds.cern.ch/record/2221658",
     year           = "2016",
 }
+@Article{EXOT-2015-11,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for pair production of Higgs bosons in the $b\bar{b}b\bar{b}$ final state using proton--proton collisions at $\sqrt{s} = 13\;\mbox{TeV}$ with the ATLAS detector}",
+    journal        = "Phys. Rev. D",
+    volume         = "94",
+    year           = "2016",
+    pages          = "052002",
+    doi            = "10.1103/PhysRevD.94.052002",
+    reportNumber   = "CERN-EP-2016-142",
+    eprint         = "1606.04782",
+    archivePrefix  = "arXiv",
+    primaryClass   = "hep-ex",
+}
+@thesis{Bryant:2644551,
+      author        = "Bryant, Patrick and Shochet, Melvyn",
+      title         = "{Search for Pair Production of Higgs Bosons in the Four
+                       Bottom Quark Final State Using Proton-Proton Collisions at
+                       sqrt(s) = 13 TeV with the ATLAS Detector}",
+      year          = "2018",
+      reportNumber  = "CERN-THESIS-2018-208",
+      url           = "https://cds.cern.ch/record/2644551",
+      note          = "Presented 2018",
+}
