--- a/HH4b.tex
+++ b/HH4b.tex
@@ -15,9 +15,9 @@
 
 \section{$HH\to\,$\bbbb: Status and Perspectives}
 \label{sec:HH4b}
-The plurality of \hh events decay via the \bbbb channel providing searches in the four \bjet final state with dominant sensitivity above some \mhh threshold.
+The plurality of \hh events decay via the \bbbb channel ensuring searches in the four \bjet final state dominant sensitivity above some \mhh threshold.
 Unfortuntely, most of the impact of modifications to the Higgs cubic coupling to the \hh cross section is near the $2\times$\mh thresold.
-In this phase space the irreducible multi-\bjet background is on the order of 200$\,$fb with signal efficiencies around 1\%.
+In this phase space the irreducible multi-\bjet background is on the order of 300$\,$fb with signal efficiencies around 1\%.
 
 Maximising the physics potential of the \bbbb channel thus requires precision modeling of complex backgrounds without reliable simulation
 and the ability to trigger on events with multiple, generically soft \bjets. In section \ref{sec:current4b} we introduce the current
@@ -33,7 +33,7 @@ lays out possible paths forward where there is clear room for improvement and op
       \newline $\approx 15$ events per \ifb
       \newline $\approx 30\%$ statistical uncertainty at peak]{
       \includegraphics[height=4.6cm]{./figures/HH4b/m4j_SR_2015.pdf}}\hfill
-    \subfloat[2018 Analysis \cite{Bryant:2644551} \bf{UPDATE WHEN PAPER IS OUT}
+    \subfloat[2018 Analysis \cite{Bryant:2644551}%% \bf{UPDATE WHEN PAPER IS OUT}
       \newline $\approx 300$ events per \ifb
       \newline $\approx  3\%$ statistical uncertainty at peak]{
       \includegraphics[height=4.4cm]{./figures/HH4b/data_hh_v_logy_2016.pdf}}
@@ -75,8 +75,7 @@ Trigger: High HLT CPU usage for tracking in b-jet triggers. Limited efficiency a
 
 3.2 Machine learning techniques to extrapolate from 2/3b data to 4b data. Use hemisphere mixing or intentionally incorrect jet pairing to validate background model techniques in Signal Region phase space with smeared or reduced signal contamination. Use trijet data to validate some multijet background techniques. 
 
-3.3 Multiple signal regions of varying purity in combined fit and/or multidimensional fits including angular variables (SUSY, background/signal different spin correlations), (b-)jet multiplicity (target VLQ, RPV SUSY, VBF), to maximize sensitivity to broad range of models. Requires high dimensional background mo
-deling and validation! 
+3.3 Multiple signal regions of varying purity in combined fit and/or multidimensional fits including angular variables (SUSY, background/signal different spin correlations), (b-)jet multiplicity (target VLQ, RPV SUSY, VBF), to maximize sensitivity to broad range of models. Requires high dimensional background modeling and validation! 
 
 3.4 Dedicated SM ZZ/ZH measurements to further validate HH techniques (in analogy to successful VH measurements by both CMS and ATLAS). This will also be useful for analysis generalizations looking for additional scalars Y->XH->4b. 
 \begin{equation*}
