--- a/HH4b.bib
+++ b/HH4b.bib
@@ -28,3 +28,46 @@
       url           = "https://cds.cern.ch/record/2644551",
       note          = "Presented 2018",
 }
+@article{Aaboud:2018knk,
+      author         = "Aaboud, Morad and others",
+      title          = "{Search for pair production of Higgs bosons in the
+                        $b\bar{b}b\bar{b}$ final state using proton-proton
+                        collisions at $\sqrt{s} = 13$ TeV with the ATLAS
+                        detector}",
+      collaboration  = "ATLAS",
+      year           = "2018",
+      eprint         = "1804.06174",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2018-029",
+      SLACcitation   = "%%CITATION = ARXIV:1804.06174;%%"
+}
+@article{Sirunyan:2018zkk,
+      author         = "Sirunyan, Albert M. and others",
+      title          = "{Search for resonant pair production of Higgs bosons
+                        decaying to bottom quark-antiquark pairs in proton-proton
+                        collisions at 13 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "08",
+      year           = "2018",
+      pages          = "152",
+      doi            = "10.1007/JHEP08(2018)152",
+      eprint         = "1806.03548",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-17-009, CERN-EP-2018-127",
+      SLACcitation   = "%%CITATION = ARXIV:1806.03548;%%"
+}
+@techreport{CMS-PAS-HIG-17-017,
+      title         = "{Search for Non-Resonant Higgs Pair-Production in the
+                       $\mathrm{b}\overline{\mathrm{b}}\mathrm{b}\overline{\mathrm{b}}$
+                       Final State with the CMS detector}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-HIG-17-017",
+      year          = "2018",
+      reportNumber  = "CMS-PAS-HIG-17-017",
+      url           = "https://cds.cern.ch/record/2628554",
+}
