--- a/HH-white-paper.tex
+++ b/HH-white-paper.tex
@@ -14,7 +14,7 @@
 \addbibresource{HH4b.bib}
 \usepackage{xspace}
 \usepackage{caption,subfig,epsfig}
-\usepackage{amsmath}
+\usepackage{amssymb,amsmath}
 
 \begin{document}
 %
