--- a/HH4b.bib
+++ b/HH4b.bib
@@ -71,3 +71,28 @@
       reportNumber  = "CMS-PAS-HIG-17-017",
       url           = "https://cds.cern.ch/record/2628554",
 }
+@techreport{ATLAS-CONF-2017-081,
+      title         = "Search for pair production of higgsinos in final states with at least 3 $b$-tagged jets using the ATLAS detector in $\sqrt{s} = 13$ TeV $pp$ collisions",
+      institution   = "CERN",
+      collaboration = "ATLAS Collaboration",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2017-081",
+      month         = Dec,
+      year          = "2017",
+      reportNumber  = "ATLAS-CONF-2017-081",
+      url           = "http://cds.cern.ch/record/2297400",
+}
+@article{PhysRevD.98.092002,
+  title = {Search for pair production of Higgsinos in final states with at least three $b$-tagged jets in $\sqrt{s}=13\text{ }\text{ }\mathrm{TeV}$ $pp$ collisions using the ATLAS detector},
+  collaboration = {ATLAS Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {98},
+  issue = {9},
+  pages = {092002},
+  numpages = {34},
+  year = {2018},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.98.092002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.092002}
+}
