--- a/HH4b.tex
+++ b/HH4b.tex
@@ -165,25 +165,30 @@ All of these approaches require well understood high dimensional background mode
 The following variables in addition to the standard Higgs candidate masses and diHiggs mass \mhh should be considered:
 \begin{itemize}
 \item Angular correlations like the pseudo rapidity separation between Higgs candidates $\Delta\eta(H_1,H_2)$ provide discrimination between scalar and tensor resonances and low mass pair Higgsino production.
-\item ($b$-)jet multiplicty to target vector like quark pair production, R-parity violating SUSY models, and VBF \hh production (VBF jet \eta and dijet mass are also relevant in this case).
-\item Angular correlations in other dijet constructions (in contrast to the Higgs candidate construction) may be provide a handle in separating signal
+\item ($b$-)jet multiplicty to target vector like quark pair production, R-parity violating SUSY models, and VBF \hh production (VBF jet $\eta$ and dijet mass are also relevant in this case).
+\item Correlations in other dijet constructions (in contrast to the Higgs candidate construction) may be provide a handle in separating signal
   from the dominant two to two gluon scattering background for $\mhh\lessapprox 400\,$GeV.
   This combinatoric background can be seen in Figure \ref{fig:eventDisplay4b} where depending on the chosen jet pairing
   the displayed event can look like a diHiggs event with back to back \bjets from each Higgs or a di-gluon event where each gluon split to a low mass collimated \bb pair. 
 \end{itemize}
 
 %%3.4 Dedicated SM ZZ/ZH measurements to further validate HH techniques (in analogy to successful VH measurements by both CMS and ATLAS).
-%%This will also be useful for analysis generalizations looking for additional scalars Y->XH->4b. 
+%%This will also be useful for analysis generalizations looking for additional scalars Y->XH->4b.
+With the full Run-2 dataset it may already be possible to perform dedicated measurements of SM $ZZ$ and $ZH$ production in the \bbbb channel.
 \begin{equation*}
   \begin{split}
-    \frac{\sigma(pp\rightarrow ZZ\rightarrow\bbbb)  }{\sigma(pp\rightarrow HH\rightarrow\bbbb)  } &\approx 31 \\[10pt]
-    \frac{\sigma(pp\rightarrow ZZ\rightarrow\bb\tau\tau)}{\sigma(pp\rightarrow HH\rightarrow\bb\tau\tau)} &\approx 71
+    \frac{\sigma(pp\rightarrow ZZ\rightarrow\bbbb)  }{\sigma(pp\rightarrow HH\rightarrow\bbbb)  } &\approx \frac{15\,\rm{pb}\times0.15^2}{33\,\rm{fb}\times0.58^2} \approx 31 \\[10pt]
+    \frac{\sigma(pp\rightarrow ZH\rightarrow\bbbb)  }{\sigma(pp\rightarrow HH\rightarrow\bbbb)  } &\approx \frac{880\,\rm{fb}\times0.15}{33\,\rm{fb}\times0.58} \approx 7
+    %%\frac{\sigma(pp\rightarrow ZZ\rightarrow\bb\tau\tau)}{\sigma(pp\rightarrow HH\rightarrow\bb\tau\tau)} &\approx \frac{15\,\rm{pb}\times2\times0.15\times0.07}{} &\approx 71
   \end{split}
 \end{equation*}
-
-%%3.5 Hardware tracking! Brief outline of HTT(FTK) upgrades? 
-
-%%3.6 Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?
+Measurements of these processes will serve to validate the background model and constrain systematic uncertainties.
+The same measurments in the $\bb\tau^+\tau^-$ final state will benefit from even larger ratios. 
+The techniques used to generalize the \hh search to these measurements will also be useful in developing generalized \bbbb searches for additional exotic particles in processes like $Y\rightarrow XH\rightarrow\bbbb$.
+\\[20pt]
+\bf{Hardware tracking! Brief outline of HTT(FTK) upgrades?}
+\\[20pt]
+\bf{Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?}
 
 
 
