--- a/HH4b.tex
+++ b/HH4b.tex
@@ -186,9 +186,9 @@ Measurements of these processes will serve to validate the background model and 
 The same measurements in the $\bb\tau^+\tau^-$ final state will benefit from even larger ratios. 
 The techniques used to generalize the \hh search to these measurements will also be useful in developing generalized \bbbb searches for additional exotic particles in processes like $Y\rightarrow XH\rightarrow\bbbb$.
 \\[20pt]
-\bf{Hardware tracking! Brief outline of HTT(FTK) upgrades?}
+\textbf{Hardware tracking! Brief outline of HTT(FTK) upgrades?}
 \\[20pt]
-\bf{Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?}
+\textbf{Attempts at 4b multijet MC? Dedicated SM multi-b unfolded xs measurement to help theory community?}
 
 
 
