--- a/HH4b.bib
+++ b/HH4b.bib
@@ -1,3 +1,24 @@
+@techreport{ATL-PHYS-PUB-2016-012,
+      title         = "{Optimisation of the ATLAS $b$-tagging performance for the
+                       2016 LHC Run}",
+      institution   = "CERN",
+      collaboration = "ATLAS Collaboration",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2016-012",
+      month         = "Jun",
+      year          = "2016",
+      reportNumber  = "ATL-PHYS-PUB-2016-012",
+      url           = "http://cds.cern.ch/record/2160731",
+}
+@article{CMS-DP-2016-042,
+      title         = "{Performance of b-Tagging Algorithms in Proton Collisions
+                       at 13 TeV using the 2016 Data}",
+      collaboration = "CMS Collaboration",
+      month         = "Jul",
+      year          = "2016",
+      reportNumber  = "CMS-DP-2016-042",
+      url           = "https://cds.cern.ch/record/2202967",
+}
 @Booklet{ATL-PHYS-PUB-2016-024,
     author         = "{ATLAS Collaboration}",
     title          = "{Projected sensitivity to Higgs boson pair production in the $b\bar{b}b\bar{b}$ final state using proton--proton collisions at HL-LHC with the ATLAS detector}",
@@ -18,6 +39,24 @@
     archivePrefix  = "arXiv",
     primaryClass   = "hep-ex",
 }
+@article{Aaboud:2018knk,
+      collaboration = "ATLAS Collaboration",
+      title          = "{Search for pair production of Higgs bosons in the
+                        $b\bar{b}b\bar{b}$ final state using proton-proton
+                        collisions at $\sqrt{s} = 13$ TeV with the ATLAS
+                        detector}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2019",
+      pages          = "030",
+      doi            = "10.1007/JHEP01(2019)030",
+      eprint         = "1804.06174",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2018-029",
+      SLACcitation   = "%%CITATION = ARXIV:1804.06174;%%"
+}
 @thesis{Bryant:2644551,
       author        = "Bryant, Patrick and Shochet, Melvyn",
       title         = "{Search for Pair Production of Higgs Bosons in the Four
@@ -27,20 +66,6 @@
       reportNumber  = "CERN-THESIS-2018-208",
       url           = "https://cds.cern.ch/record/2644551",
       note          = "Presented 2018",
-}
-@article{Aaboud:2018knk,
-      author         = "Aaboud, Morad and others",
-      title          = "{Search for pair production of Higgs bosons in the
-                        $b\bar{b}b\bar{b}$ final state using proton-proton
-                        collisions at $\sqrt{s} = 13$ TeV with the ATLAS
-                        detector}",
-      collaboration  = "ATLAS",
-      year           = "2018",
-      eprint         = "1804.06174",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-EP-2018-029",
-      SLACcitation   = "%%CITATION = ARXIV:1804.06174;%%"
 }
 @article{Sirunyan:2018zkk,
       author         = "Sirunyan, Albert M. and others",
@@ -58,6 +83,20 @@
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-HIG-17-009, CERN-EP-2018-127",
       SLACcitation   = "%%CITATION = ARXIV:1806.03548;%%"
+}
+@article{Sirunyan:2018tki,
+      author         = "Sirunyan, Albert M and others",
+      title          = "{Search for nonresonant Higgs boson pair production in
+                        the $\mathrm{b\overline{b}b\overline{b}}$ final state at
+                        $\sqrt{s} =$ 13 TeV}",
+      collaboration  = "CMS",
+      journal        = "Submitted to: JHEP",
+      year           = "2018",
+      eprint         = "1810.11854",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-17-017, CERN-EP-2018-269",
+      SLACcitation   = "%%CITATION = ARXIV:1810.11854;%%"
 }
 @techreport{CMS-PAS-HIG-17-017,
       title         = "{Search for Non-Resonant Higgs Pair-Production in the
@@ -96,3 +135,4 @@
   doi = {10.1103/PhysRevD.98.092002},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.98.092002}
 }
+
